--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongodb": "^4.2.2",
     "node-cron": "^3.0.0",
     "telegraf": "^4.5.2",
     "telegraf-session-local": "^2.1.0"
