--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongodb": "^4.2.2",
     "node-cron": "^3.0.0",
     "telegraf": "^4.5.2",
+    "telegraf-anycase-commands": "^1.1.0",
     "telegraf-session-local": "^2.1.0"
   },
   "devDependencies": {
